[project]
name = "audiocompression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "librosa>=0.11.0",
    "pytest>=8.3.5",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
